# sermon_splitter

./: .pre-commit-config.yaml  README.md  app.py  config.py  main.py  pyproject.toml
backend/audio/: extractor.py  hindi_to_hinglish.py  transcriber.py
backend/pipeline/: sermon_pipeline.py
backend/subtitles/: ass_styler.py  burner.py  refitter.py
backend/utils/: ffmeg_utils_test.py  ffmpeg_manager.py  ffmpeg_utils.py  ffmpeg_utils_test.py  file_utils.py
backend/video/: concatenator.py  cutter.py  downloader.py  face_tracker.py
deprecated/: app.py  main.py  sermon_splitter.py
videos/youtube_downloads/artifacts/: clip_vertical.srt  hinglish_subtitles.srt  temp_subtitles.ass  temp_subtitles.srt
